// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-sc-1xtkoc1-0 JSTnH"
>
  <h2
    class="feature__SubTitle-sc-1xtkoc1-2 ghlNYx"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-1xtkoc1-0 JSTnH"
>
  <h1
    class="feature__Title-sc-1xtkoc1-1 hQUhTu"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-1xtkoc1-0 JSTnH"
>
  <h1
    class="feature__Title-sc-1xtkoc1-1 hQUhTu"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-1xtkoc1-2 ghlNYx"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
